# 3d-helmholtz-robin-ordering

./: .gitignore  CITATION.cff  CITATION.md  CONTRIBUTING.md  COPYRIGHT_AND_LICENSES.md  LICENSE  LICENSE-data  README.md  ZENODO_RELEASE.md  pyproject.toml
archive/: README.md
archive/original_scripts/: bcc_supercell_readout.py  cubic_family_physical_readout.py  cubic_family_readout.py  cubic_family_structure_factor_proxy.py  face_patch_scan_supercell.py  fcc_supercell_readout.py  feature_ablation_tests_reduced.py  field_information_distribution_supercell.py  field_shuffle_null_tests.py  geometry_phase_map.py  hexahedron_shear_study.py  primitive_cubic_supercell_hardened.py  primitive_cubic_supercell_ordered.py  robin_3d_fem_eigenproblem.py  robin_3d_fem_hexahedron.py  robin_3d_fem_quader.py  tetrahedron_fem_center_emergence.py
docs/: forschungshistorie.md  github_release_notes.md  manuscript_figure_map.md  manuscript_link.md  paper1_claim_map.md  paper1_section_map_arxiv.md  paper_figure_map.md  provenance_and_reconstructions.md  public_release_checklist.md  release_notes_v8.md  repo_map.md  reproducibility_status.md
docs/main_strand/: nullmodel_blindtests_forschungshistorie_v1.md  nullmodel_blindtests_repo_substructure_v1.md  (+1 more)
scripts/: 01_cube_solver_basics.py  02_geometry_center_readout.py  03_tetrahedron_control.py  04_hexahedron_shear_study.py  05_center_emergence.py  06_primitive_cubic_supercell.py  07_fcc_supercell_readout.py  08_face_information_sidebranch.py  reproduce_core.sh  reproduce_extended.sh  reproduce_public_minimum.sh
src/paper1/: __init__.py  (+10 more)
(+66 files in other folders)
